# UGR_2017-2018

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  makefile
Edward7L/: README.md
KendraAndersen/: Project Notebook.docx  README.md  sample_WP_file  ~$oject Notebook.docx
KendraAndersen/Meeting_Presentations/: Group Meeting 17-10-23.pptx  Group Meeting 17-10-30.pptx  Group Meeting 17-11-13.pptx  Group Meeting 17-11-20.pptx  Group Meeting 17-11-26.pptx  Group Meeting 17-12-4.pptx  Presentation 17-11-06.pptx  Presentation 18-02-16.pptx  ~$Group Meeting 17-11-20.pptx
SarahBRaines/: AP_Corrected.pptx  AP_Horn_data.xlsx  AP_Omni_Terrain_data.xlsx  AP_Omni_data.xlsx  EQ_1_data_Horn.xlsx  EQ_1_data_Omni.xlsx  EQ_2_Terrain_Horn_data.xlsx  EQ_2_Terrain_Omni_data.xlsx  README.md
SarahBRaines/AP_GPS_data/: AP_Rx123_Omni_Terrain.power.t001_01.r005.p2m  AP_Rx123_Omni_Terrain.power.t001_01.r006.p2m  AP_Rx123_Omni_Terrain.power.t001_01.r007.p2m  AP_Rx123_Omni_Terrain.power.t001_02.r005.p2m  AP_Rx123_Omni_Terrain.power.t001_02.r006.p2m  AP_Rx123_Omni_Terrain.power.t001_02.r007.p2m  AP_Rx123_Omni_Terrain.power.t001_03.r005.p2m  AP_Rx123_Omni_Terrain.power.t001_03.r006.p2m  AP_Rx123_Omni_Terrain.power.t001_03.r007.p2m  AP_Rx123_Omni_Terrain.power.t001_04.r005.p2m  AP_Rx123_Omni_Terrain.power.t001_04.r006.p2m  AP_Rx123_Omni_Terrain.power.t001_04.r007.p2m
SarahBRaines/EQ_1_Horn_Rx123_2.5 GHz/: ENG_Quad_1_Rx1_Directional.paths.t001_15.r013.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_15.r020.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_15.r022.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_16.r013.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_16.r020.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_16.r022.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_17.r013.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_17.r020.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_17.r022.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_18.r013.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_18.r020.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_18.r022.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_19.r013.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_19.r020.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_19.r022.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_15.r013.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_15.r020.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_15.r022.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_16.r013.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_16.r020.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_16.r022.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_17.r013.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_17.r020.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_17.r022.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_18.r013.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_18.r020.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_18.r022.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_19.r013.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_19.r020.p2m  ENG_Quad_1_Rx1_Directional.pg.t001_19.r022.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_15.r013.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_15.r020.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_15.r022.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_16.r013.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_16.r020.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_16.r022.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_17.r013.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_17.r020.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_17.r022.p2m  ENG_Quad_1_Rx1_Directional.pl.t001_18.r013.p2m  (+50 more)
SarahBRaines/EQ_1_Horn_Rx123_5.8 Ghz/: ENG_Quad_1_Rx1_Directional.paths.t001_15.r013.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_15.r020.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_15.r022.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_16.r013.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_16.r020.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_16.r022.p2m  ENG_Quad_1_Rx1_Directional.paths.t001_17.r013.p2m  (+83 more)
VincentNguyenTamu/: Readme.md  Single_Patch_Radiation_Pattern.csv  radiation_pattern_plotting.py
WiFi_Finding/: ReadMe  train.py  wifiWayfinder.py
aggieem/: README.md
akjagadeesh/: 491.pptx  README.md
cafeclimber/: .gitignore  README.md
cafeclimber/basicRssi/: CMakeLists.txt
cafeclimber/basicRssi/include/: basic_rssi.hpp  packet.hpp
cafeclimber/basicRssi/src/: basic_rssi.cpp  packet.cpp
chloenshay/: README.md
dlau94045/: README.md
docs/: Doxyfile
eld00d/: README.md
etdel651/: README.md
include/: basic_rssi.hpp  datalogger.hpp  hackrf_interface.hpp  pixhawk_interface.hpp  serial_port.hpp
jfreking/: Computer Vision Recognition and Positioning.pptx  Kinect Calibration - Sheet1.csv  README.md  arduino_Serial.py  ffmpeg_frame_grab.txt  kinect_recognition_dlib.py  kinect_recognition_real_time.py
smilingmelanie/: README.md
src/: datalogger.cpp  datalogger.hpp  hackrf_interface.cpp  pixhawk_interface.cpp  pixhawk_interface.hpp  serial_port.cpp  serial_port.hpp
tamujared/: README.md  linear_array_null_placement_animated.py
(+270 files in other folders)
